--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center">Welcome to Accio Jobs!</h1>
+	<h1 style="color:blue">Blog</h1>
+	<img src="https://images.pexels.com/photos/1478685/pexels-photo-1478685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+	<h1>Brute Force vs. Optimization</h1>
+	<p>We can say that optimization is one step further than the brute-force method of problem solving...</p>
+	<img src="https://media.istockphoto.com/id/870477626/photo/sunset-landscape.webp?s=2048x2048&w=is&k=20&c=oDXG9HPmrPhuv851RURSArBPhWEZsoRYPAM5WXNmWSQ=">
+	<h1>DSA vs. Competitive Programming</h1>
+	<p>DSA or Competitive programming?What is better for you?Questions such as these often put you in a...</p>
+	<img src="https://media.istockphoto.com/id/966319172/photo/sunset-at-bois-blanc-beach-in-etang-sale-reunion-island.jpg?s=2048x2048&w=is&k=20&c=Dvuz4K65xkC1HX4lVN69SzGbKoe4QFaafuqh5JZoXpg=">
+	<h1>Complete Guide on FlexBox</h1>
+	<p>As a job seeker,you may wonder how to make your linkedin profile stand out to recuiters.Your Linkedin....</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
