--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
 	<h1 class="b">DSA vs. Competitive Programming</h1>
 	<p class="c">DSA or Competitive programming?What is better for you?Questions such as these often put you in a...</p>
 	<img src="https://media.istockphoto.com/id/966319172/photo/sunset-at-bois-blanc-beach-in-etang-sale-reunion-island.jpg?s=2048x2048&w=is&k=20&c=Dvuz4K65xkC1HX4lVN69SzGbKoe4QFaafuqh5JZoXpg=">
-	<h1 class="b">Complete Guide on FlexBox</h1>
-	<p class="c">As a job seeker,you may wonder how to make your linkedin profile stand out to recuiters.Your Linkedin....</p>
+	<h1 class="d">Complete Guide on FlexBox</h1>
+	<p class="d">As a job seeker,you may wonder how to make your linkedin profile stand out to recuiters.Your Linkedin....</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
